--- a/FeedbackApp.Components/FeedbackApp.Components.csproj
+++ b/FeedbackApp.Components/FeedbackApp.Components.csproj
@@ -13,6 +13,14 @@
 
 	<ItemGroup>
 		<SupportedPlatform Include="browser" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="wwwroot\js\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\FeedbackApp.Shared\FeedbackApp.Shared.csproj" />
 	</ItemGroup>	
 
 
